app-chart/templates/ingress-rules.yaml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: default
spec: 
  rules: 
    - http: 
        paths: 
          - path: /?(.*)
            backend: 
              serviceName: nginxserver-cluster-ip-service
              servicePort: 80
          - path: /python/?(.*)
            backend: 
              serviceName: pythonapp-cluster-ip-service
              servicePort: 5000
